# pyladies-bot

./: CONTRIBUING.md  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-formatter.yml
pyladiesbrasilbot/: core.py
pyladiesbrasilbot/files/: .gitignore
pyladiesbrasilbot/utils/: __init__.py  constants.py  messages.py
