[tool.poetry]
name = "ladies-bot"
version = "0.1.0"
description = ""
authors = ["naanadr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
python-telegram-bot = "13.0"
python-dotenv = "0.14.0"

[tool.poetry.dev-dependencies]
ipdb = "0.13.4"
flake8 = "3.8.4"
black = "20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
